--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -32,12 +31,14 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation project(path: ':library')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.startup:startup-runtime:1.1.1'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.tencent:mmkv:1.2.13'
+    implementation 'com.getkeepsafe.relinker:relinker:1.4.3'
 }
