--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.tencent:mmkv:1.2.13'
     implementation 'com.getkeepsafe.relinker:relinker:1.4.3'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 }
