--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation project(path: ':library')
     implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.work:work-runtime-ktx:2.5.0'
     implementation 'androidx.startup:startup-runtime:1.1.1'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.tencent:mmkv:1.2.13'
